cluster/core/flux-system/webhook/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    external-dns.home.arpa/enabled: "true"
    cert-manager.home.arpa/enabled: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: flux-receiver.${DOMAIN}
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - flux-receiver.${DOMAIN}
      secretName: flux-receiver-tls
